packages/rmw/zenoh/zpico-sys/c/include/zpico.h


typedef struct zpico_session_t {
  uint8_t _private[0];
} zpico_session_t;
typedef struct zpico_property_t {
  const char *key;
  const char *value;
} zpico_property_t;
typedef void (*ZpicoCallback)(const uint8_t *data, size_t len, void *ctx);
typedef void (*ZpicoCallbackWithAttachment)(const uint8_t *data,
                                            size_t len,
                                            const uint8_t *attachment,
                                            size_t attachment_len,
                                            void *ctx);
typedef void (*ZpicoNotifyCallback)(size_t len,
                                    const uint8_t *attachment,
                                    size_t attachment_len,
                                    void *ctx);
typedef struct zpico_ring_desc_t {
  uint8_t *payload_base;
  size_t payload_stride;
  uint8_t *att_base;
  size_t att_stride;
  size_t slot_count;
  size_t *payload_len;
  size_t *att_len;
  size_t *head;
  size_t *tail;
} zpico_ring_desc_t;
typedef void (*ZpicoZeroCopyCallback)(const uint8_t *data,
                                      size_t len,
                                      const uint8_t *attachment,
                                      size_t attachment_len,
                                      void *ctx);
struct zpico_session_t *zpico_session_acquire(void);
void zpico_session_release(struct zpico_session_t *_session);
int32_t zpico_init(struct zpico_session_t *_session, const char *_locator);
int32_t zpico_init_with_config(struct zpico_session_t *_session,
                               const char *_locator,
                               const char *_mode,
                               const struct zpico_property_t *_properties,
                               size_t _num_properties);
int32_t zpico_open(struct zpico_session_t *_session);
int32_t zpico_is_open(struct zpico_session_t *_session);
int32_t zpico_send_keep_alive(struct zpico_session_t *_session);
int32_t zpico_publish_streamed(struct zpico_session_t *_session,
                               int32_t _handle,
                               size_t _total_len,
                               void (*_chunk_cb)(uint8_t *out_buf,
                                                 size_t cap,
                                                 size_t *out_written,
                                                 void *user_ctx),
                               void *_user_ctx,
                               const uint8_t *_attachment,
                               size_t _attachment_len);
void zpico_close(struct zpico_session_t *_session);
void zpico_set_task_config(uint32_t _read_priority,
                           uint32_t _read_stack_bytes,
                           uint32_t _lease_priority,
                           uint32_t _lease_stack_bytes);
int32_t zpico_declare_publisher(struct zpico_session_t *_session, const char *_keyexpr);
int32_t zpico_declare_publisher_ex(struct zpico_session_t *_session,
                                   const char *_keyexpr,
                                   int32_t _is_express);
int32_t zpico_publish(struct zpico_session_t *_session,
                      int32_t _handle,
                      const uint8_t *_data,
                      size_t _len);
int32_t zpico_undeclare_publisher(struct zpico_session_t *_session, int32_t _handle);
int32_t zpico_declare_subscriber(struct zpico_session_t *_session,
                                 const char *_keyexpr,
                                 ZpicoCallback _callback,
                                 void *_ctx);
int32_t zpico_declare_subscriber_with_attachment(struct zpico_session_t *_session,
                                                 const char *_keyexpr,
                                                 ZpicoCallbackWithAttachment _callback,
                                                 void *_ctx);
int32_t zpico_declare_subscriber_direct_write(struct zpico_session_t *_session,
                                              const char *_keyexpr,
                                              uint8_t *_buf_ptr,
                                              size_t _buf_capacity,
                                              const bool *_locked_ptr,
                                              ZpicoNotifyCallback _callback,
                                              void *_ctx);
int32_t zpico_declare_subscriber_ring(struct zpico_session_t *_session,
                                      const char *_keyexpr,
                                      struct zpico_ring_desc_t *_desc,
                                      ZpicoNotifyCallback _callback,
                                      void *_ctx);
int32_t zpico_subscribe_zero_copy(struct zpico_session_t *_session,
                                  const char *_keyexpr,
                                  ZpicoZeroCopyCallback _callback,
                                  void *_ctx);
int32_t zpico_undeclare_subscriber(struct zpico_session_t *_session, int32_t _handle);
bool zpico_uses_polling(void);
int32_t zpico_get_zid(struct zpico_session_t *_session, uint8_t *_zid_out);
int32_t zpico_declare_liveliness(struct zpico_session_t *_session, const char *_keyexpr);
int32_t zpico_undeclare_liveliness(struct zpico_session_t *_session, int32_t _handle);
int32_t zpico_publish_with_attachment(struct zpico_session_t *_session,
                                      int32_t _handle,
                                      const uint8_t *_data,
                                      size_t _len,
                                      const uint8_t *_attachment,
                                      size_t _attachment_len);